carrito added, fixed catalogo

--- a/pages/carrito/carrito.html
+++ b/pages/carrito/carrito.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="carrito.css">
+    <script type="module" src="../carrito/carrito.js"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
+
     <title>Carrito</title>
 </head>
 <body>
-    
+    <h1>CARRITO</h1>
+    <hr>
+    <section>
+    <ul id="carrito">
+    </ul>
+    </section>
 </body>
 </html>
