--- a/pages/catalogo/catalogo.html
+++ b/pages/catalogo/catalogo.html
@@ -17,7 +17,7 @@
           </a>
           <div class="navDiv">
             <form action="">
-                <input type="text" placeholder="Palluzzi,Nueces,Azucar organica...">
+                <input type="text" placeholder="Palluzzi,Nueces,Azucar organica..." id="buscador">
                 <button type="submit">Buscar</button>
             </form>
             <a href="/pages/carrito/carrito.html">Carrito</a>
@@ -29,6 +29,7 @@
         </nav>
       </header>
     <main>
+     
         <section>
             <h1 class="h1-productos-catalogo">Nuestos productos recomendados!</h1>
             <ul id="catalogo" class="ul-catalogo"></ul>
