funcionalidad de busqueda de elementos y de carrito agregadas

--- a/pages/carrito/carrito.html
+++ b/pages/carrito/carrito.html
@@ -10,11 +10,16 @@
     <title>Carrito</title>
 </head>
 <body>
+    
     <h1>CARRITO</h1>
     <hr>
-    <section>
-    <ul id="carrito">
+    <section class="section-carrito">
+    <ul id="carrito" >
     </ul>
+    <div class="total-carrito">
+        <h2>Total: <span id="total"></span></h2>
+        <button>Pagar</button>
+    </div>
     </section>
 </body>
 </html>
