--- a/pages/catalogo/catalogo.html
+++ b/pages/catalogo/catalogo.html
@@ -30,7 +30,7 @@
       </header>
     <main>
      
-        <section>
+        <sections>
             <h1 class="h1-productos-catalogo">Nuestos productos recomendados!</h1>
             <ul id="catalogo" class="ul-catalogo"></ul>
             
