finalizado logica de carrito

--- a/pages/carrito/carrito.html
+++ b/pages/carrito/carrito.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="carrito.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="carrito.css" />
     <script type="module" src="../carrito/carrito.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
 
     <title>Carrito</title>
-</head>
-<body>
-    
-    <h1>CARRITO</h1>
-    <hr>
+  </head>
+  <body>
+    <nav class="nav-carrito">
+        <a href="">Volver</a>
+        <h1 class="carrito-h1">CARRITO</h1>
+    </nav>
+    <hr />
     <section class="section-carrito">
-    <ul id="carrito" >
-    </ul>
-    <div class="total-carrito">
-        <h2>Total: <span id="total"></span></h2>
+      <ul id="carrito"></ul>
+      <div class="total-carrito">
+          <h2>Total</h2>
+          <span id="total"></span>
+          <h2>Cantidad de productos</h2>
+          <span id="cantidadProductos"></span>
         <button>Pagar</button>
-    </div>
+      </div>
     </section>
-</body>
+  </body>
 </html>
