--- a/pages/carrito/carrito.html
+++ b/pages/carrito/carrito.html
@@ -11,18 +11,18 @@
   </head>
   <body>
     <nav class="nav-carrito">
-        <a href="">Volver</a>
+        <a href="../catalogo/catalogo.html">Volver</a>
         <h1 class="carrito-h1">CARRITO</h1>
     </nav>
     <hr />
     <section class="section-carrito">
       <ul id="carrito"></ul>
       <div class="total-carrito">
-          <h2>Total</h2>
+          <h2 class="total-h2">Total</h2>
           <span id="total"></span>
-          <h2>Cantidad de productos</h2>
+          <h2 class="cantidadProductos-h2">Cantidad de productos</h2>
           <span id="cantidadProductos"></span>
-        <button>Pagar</button>
+        <button class="boton-pagar">Pagar</button>
       </div>
     </section>
   </body>
