--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8" />
     <title>AMARANTO</title>
     <link rel="stylesheet" href="/styles.css" />
     <script src="script.js"></script>
-    <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
     <header>
@@ -16,10 +16,6 @@
         <div class="navDiv">
           <a href="/pages/catalogo/catalogo.html">Catálogo</a>
           <a href="/pages/carrito/carrito.html">Carrito</a>
-          <div >
-            <a class="btn-usuario" href="">Crear cuenta</a>
-            <a class="btn-usuario" href="#usuario">Ingresar</a>
-        </div>
         </div>
       </nav>
     </header>
@@ -59,7 +55,6 @@
     </main>
 
     <footer>
-      <!-- Aquí iría el pie de página -->
     </footer>
   </body>
 </html>
