--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <nav class="nav sticky shadow-md">
+      <nav class="nav">
         <a href="#nosotros">
           <img class="logo" src="/statics/logo/AMARANTO.png" alt="Amaranto Logo" />
         </a>
