--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     <main>
       <section id="nosotros" class="about">
         <div>
-          <h1 class="about-h1 text-4xl text-center">AMARANTO</h1>
-          <h2 class="about-h2 text-xl text-center"> Nutrición consciente para una vida saludable</h2>
-          <p class="about-p text-center">
+          <h1 class="about-h1">AMARANTO</h1>
+          <h2 class="about-h2 "> Nutrición consciente para una vida saludable</h2>
+          <p class="about-p ">
             En Amaranto, creemos en el poder de la alimentación para transformar
             vidas. Como dietética especializada, nos dedicamos a promover un
             estilo de vida saludable y activo a través de nuestros productos.
